# matter-rag

./: .env.example  .gitignore  .ignore_rules.json  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  sources.json
.claude/: CLAUDE.md  commands.md  hooks.md  skills.md
.claude/commands/: code-review.md  generate-test-script.md  review-and-update-docs.md  setup-lm-studio.md
.github/workflows/: nightly-base-build.yml  pr-analysis.yml
config/: config.yaml  protocol_tc_section_map.yaml
config/skills/: matter_spec_skill.md
data/: README.md
docker/: entrypoint.sh
docs/: ci_setup.md  e2eflow.md  llm_customization.md  projectflow.md  run_pipeline_options.md
llm_prompts/: matter_spec_skill.md  matter_test_coverage_and_structure.md
llm_prompts/additional_context/: all.md  pass2.md  pass3.md
llm_prompts/additional_extensions/: all.md  pass1.md  pass2.md  pass3.md
llm_prompts/spec_context_summaries/: ACE_summary.md  DA_summary.md  DD_CommFlows_summary.md  DD_summary.md  FS_summary.md  IDM_summary.md  JF_summary.md  SC_CASE_summary.md  SC_Discovery_summary.md  SC_GroupKey_summary.md  SC_Group_summary.md  SC_IPv6_summary.md  SC_MRP_summary.md  SC_MsgSec_summary.md  SC_NFC_summary.md  SC_PASE_summary.md  SC_TCP_summary.md
scripts/: generate_test_scripts.py  run_coverage_analysis.py  run_ghpr_analysis.py  run_pics_analysis.py  run_pipeline.py  run_sdk_coverage_analysis.py
scripts/.claude/: CLAUDE.md  skills.md
scripts/helper_scripts/: adoc_to_diff_html.py  audit_kg_viz_tc_bleed.py  build_docker_image.py  build_knowledge_base.py  build_tc_index.py  convert_zap_xmls.py  export_kg_csv.py  fix_llm_call_html.py  generate_spec_diff.py  generate_spec_summaries.py  setup_workspace.py  verify_kg_tc_cluster_assignments.py  verify_kg_tc_mapping.py
scripts/helper_scripts/.claude/: CLAUDE.md  skills.md
src/: __init__.py  logging_config.py
src/chunker/: __init__.py  base_chunker.py  matter_tc_chunker.py
src/chunker/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/config/: config_loader.py  models.py
src/config/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/database/: base_store.py  chroma_store.py  docker_store.py  faiss_store.py  postgres_store.py  vector_store.py
src/database/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/document_updater/: __init__.py  adoc_updater.py  base_updater.py  tc_index_builder.py  updater_registry.py
src/document_updater/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/embeddings/: embeddings.py
src/embeddings/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/engine/: ARCHITECTURE.md  adoc_updater.py  coverage_analysis_nodes.py  nodes.py  pics_analysis_nodes.py  pipeline.py  run_context.py  sdk_coverage_nodes.py
src/engine/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/engine/graphs/: __init__.py  chat_graph.py  cli_graph.py  coverage_analysis_graph.py  pics_analysis_graph.py  sdk_coverage_graph.py
src/fetcher/: base_fetcher.py  docker_base.py  document_fetcher.py  fetcher_registry.py  spec_diff_builder.py
src/fetcher/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/fetcher/sources/: csv_fetcher.py  github_pr_fetcher.py  github_repo_fetcher.py  github_tag_diff_fetcher.py  local_folder_fetcher.py  matter_xml_fetcher.py  url_fetcher.py  zap_xml_adapter.py
src/fetcher/sources/.claude/: CLAUDE.md  hooks.md  rules.md  (+1 more)
src/knowledge_graph/: base_graph.py  dm_pics_validator.py  dm_xml_parser.py  docker_graph.py  graph_builder.py  graph_factory.py  kb_graph_builder.py  knowledge_base.py  llm_spec_refiner.py  matter_kg_builder.py  rule_engine.py  schema.py  spec_extractor.py  test_plan_extractor.py  vector_chunk_gen.py
src/knowledge_graph/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/llm/: call_logger.py  llm_provider.py
src/llm/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/loader/: adoc_loader.py  base_loader.py  csv_loader.py  document_loader.py  html_loader.py  loader_factory.py  pdf_loader.py  text_loader.py
src/loader/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/processor/: change_extractor.py  document_processor.py  html_semantic_parser.py  matter_html_processor.py  matter_schema_extractor.py  semantic_chunker.py
src/processor/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
src/search/: faiss_search.py  reranker.py
src/search/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
tests/: test_change_extractor.py  test_chunker.py  test_config.py  test_fetcher.py  test_llm.py  test_loader.py  test_vector_store.py
tests/.claude/: CLAUDE.md  skills.md
tests/app/: README.md  main.py  run.py
tests/app/.claude/: CLAUDE.md  hooks.md  rules.md  skills.md
tests/app/routes/: chat.py
tests/app/services/: history_builder.py  kg_tools.py  mcp_chat.py  pipeline_adapter.py  session_store.py
tools/: README.md  kg_llm_transformer.py
