[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "matter-rag"
version = "0.1.0"
description = "RAG pipeline that compares Matter spec PR changes against existing test plans and identifies missing or stale test cases."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"   # faiss-cpu does not yet support Python 3.13

authors = [
    { name = "RAG Developer" },
]

keywords = [
    "matter",
    "chip",
    "rag",
    "langgraph",
    "test-automation",
    "embeddings",
    "faiss",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---------------------------------------------------------------------------
# Runtime dependencies (mirrors requirements.txt)
# ---------------------------------------------------------------------------
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.34.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "networkx>=3.3",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "ollama>=0.3.0",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# ChromaDB vector store backend
chroma = [
    "chromadb>=0.5.0",
]

# PostgreSQL + pgvector backend
postgres = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.6",
]

# All vector store backends
all-backends = [
    "chromadb>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.6",
]

# Development + test tools
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# ---------------------------------------------------------------------------
# Console scripts
# ---------------------------------------------------------------------------
[project.scripts]
matter-rag = "scripts.run_pipeline:main"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "WARNING"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",  # assert statements (used in tests)
    "S608",  # SQL string formatting (used in postgres_store)
    "B008",  # function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true   # many deps lack stubs (faiss, chromadb, …)
exclude = ["tests/", "scripts/"]
